# CDDSystem

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  quick_start.bat
include/: commons.h  db_config_dialog.h  db_manager.h  detect_thread.h  history_dialog.h  inference.h  main_window_c.h  opencv_detector.h
resources/: assets.qrc
src/: commons.cpp  db_config_dialog.cpp  db_manager.cpp  detect_thread.cpp  history_dialog.cpp  inference.cpp  main.cpp  main_window_c.cpp  opencv_detector.cpp
ui/: main_window.ui
weights/: ceramic_defect.txt
